force-app/main/default/objects/Party_Affected__c/Party_Affected__c.object-meta.xml
<CustomObject>
    <label>Party Affected</label>
    <nameField>
        <displayFormat>Party Affected-{000000}</displayFormat>
        <label>Party Affected Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parties Affected</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>