force-app/main/default/objects/Party_Affected__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipName>Parties_Affected</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>