force-app/main/default/objects/Party_Affected__c/fields/Case_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case_Management__c</field>
            <operation>equals</operation>
            <valueField>Case_Role__c.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipName>Parties_Affected</relationshipName>
    <type>Lookup</type>
</CustomField>