force-app/main/default/objects/Party_Affected__c/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lien</label>
    <referenceTo>Lien__c</referenceTo>
    <relationshipLabel>Parties Affected</relationshipLabel>
    <relationshipName>Parties_Affected</relationshipName>
    <type>Lookup</type>
</CustomField>